src/objects/sdfs__FormulaShare_Processed_Share_Event__e.object
<CustomObject>
    <description>Published every time FormulaShare sharing assessment is made, and trigger the creation of FormulaShare Processed Record and FormulaShare Processed Record Share records</description>
    <fields>
        <fullName>sdfs__Access_Level__c</fullName>
        <label>Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Assessment_Type_Override__c</fullName>
        <label>Assessment Type Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Context_Detail__c</fullName>
        <label>Context Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Existing_Sharing_On_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Sharing On Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Failed_Status_Reason__c</fullName>
        <label>Failed Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__FormulaShare_Rule_Name__c</fullName>
        <label>FormulaShare Rule Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Processed_Date_Time__c</fullName>
        <label>Processed Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Batch_Log_Id__c</fullName>
        <label>Related Batch Log Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Share_Id__c</fullName>
        <label>Share Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Share_Key__c</fullName>
        <label>Share Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Share_With__c</fullName>
        <label>Share With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Shared_To_Field_Type__c</fullName>
        <label>Shared To Field Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Shared_to_Id__c</fullName>
        <label>Shared to Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Sharing_Reason__c</fullName>
        <label>Sharing Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FormulaShare Processed Share Event</label>
    <pluralLabel>FormulaShare Processed Share Events</pluralLabel>
</CustomObject>